[package]
name = "weighted-signatures"
version = "0.0.1"
authors = [ "Rohit Sinha" ]
description = "A SNARK-based threshold weighted signature scheme"
repository = "https://github.com/rsinha/weighted-signatures"
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bls12-377 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-bw6-761 = { version = "0.3.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-bw6-761 = { version = "0.3.0" }
ark-relations = { version = "^0.3.0", default-features = false }
num-bigint = { version = "0.4.0", default-features = false }
rand = "*"
ark-snark = { version = "0.3.0", default-features = false }
ark-groth16 = { version = "0.3.0", default-features = false, features = [ "r1cs", "parallel" ] }
ark-crypto-primitives = { version = "^0.3.0", default-features = true }
ark-serialize = { version = "^0.3.0", default-features = true }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
